# scoped-metric-engine-project

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
docs/: GETTING_STARTED.md  changelog.md  conf.py  contributing.md  faq.md  index.rst  requirements.txt  testing.md
docs/concepts/: aggregation.md  fetching.md  metric-model.md  scope-and-population.md
docs/howto/: configure-population.md  define-aggregation-policy.md  define-metric-registry.md  implement-fetchers.md  translate-english-queries.md  write-metric-adapter.md
docs/reference/: aggregation.rst  api_index.rst  engine.rst  fetching.rst  metadata.rst  normalization.rst  requests.rst  results.rst
scoped_metric_engine/: __init__.py  aggregation.py  compute.py  dependency_resolver.py  engine.py  exceptions.py  execution_context.py  fact.py  fact_key.py  fact_store.py  fetch_plan.py  fetch_request.py  fetchers.py  group_key.py  issues.py  metric_metadata.py  normalization.py  population.py  requests.py  results.py  row_assembly.py  scope.py  slice.py  types.py  zero_fill.py
tests/: __init__.py  conftest.py  test_aggregation.py  test_compute.py  test_engine_aggregate_metrics.py  test_engine_resolve_metrics.py  test_fetch_planning.py  test_fixes.py  test_normalization.py  test_population.py  test_scope.py  test_zero_fill.py
