[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoped-metric-engine"
version = "0.1.0"
description = "Domain-neutral scoped metric orchestration library built around Metric Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
  "myst-parser>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
