[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoped-metric-engine"
version = "0.1.0"
description = "Domain-neutral scoped metric orchestration library built around Metric Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI"}]
dependencies = [
    "metric-engine @ git+https://github.com/adieyal/metric-engine.git",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.11", "pre-commit>=4.0"]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
  "myst-parser>=2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
